--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
                         <div class="flex-item" id="flex1">
                             <div>
                                 <h2 class="albumname">Lana Del Rey - Born To Die</h2>
-                                <h2 class="playnow">Şimdi Çal</h2>
+                                <a href="https://open.spotify.com/track/4Ouhoi2lAhrLJKFzUqEzwl?si=I3yKEceqSsez5dSThNxcnA"><h2 class="playnow">Şimdi Çal</h2></a>
                             </div>
                         </div>
                         <div class="flex-item" id="flex2">
                             <div>
                                 <h2 class="albumname">Ariana Grande - God Is A Woman</h2>
-                                <h2 class="playnow">Şimdi Çal</h2>
+                                <a href="https://open.spotify.com/track/5OCJzvD7sykQEKHH7qAC3C?si=j-joGzIlQ7qLDMAojr_kjA"><h2 class="playnow">Şimdi Çal</h2></a>
                             </div>
                         </div>
                         <div class="flex-item" id="flex3">
                             <div>
                                 <h2 class="albumname">Taylor Swift - Blank Space</h2>
-                                <h2 class="playnow">Şimdi Çal</h2>
+                                <a href="https://open.spotify.com/track/1u8c2t2Cy7UBoG4ArRcF5g?si=TqPws3IGSKGxcLF3B92P1A"><h2 class="playnow">Şimdi Çal</h2></a>
                             </div>
                         </div>
                         <div class="flex-item" id="flex4">
                             <div>
                                 <h2 class="albumname">Iggy Azalea - Kream</h2>
-                                <h2 class="playnow">Şimdi çal</h2>
+                                <a href="https://open.spotify.com/track/5mu1uv8RmzDkF8foePK5qa?si=vMjmYOHtTG-GFKcUcfEX5Q"><h2 class="playnow">Şimdi Çal</h2></a>
                             </div>
                         </div>
                     </div>
