--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div id="headermain">
                     <h1>Müzik mi arıyorsun?</h1>
                     <h2>Yeni çıkanların en iyilerini dinlemeye başla.</h2>
-                    <button id="webplayerbtn">WEB PLAYER'I BAŞLAT</button>
+                    <a href="https://open.spotify.com/"><button id="webplayerbtn">WEB PLAYER'I BAŞLAT</button></a>
                     <div class="flex-container">
                         <div class="flex-item" id="flex1">
                             <div>
